--- a/.tekton/coo-fbc-v4-18-push.yaml
+++ b/.tekton/coo-fbc-v4-18-push.yaml
@@ -4,10 +4,9 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/rhobs/konflux-coo?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
-    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" &&
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
       (".tekton/coo-fbc-v4-18-pull-request.yaml".pathChanged() ||
       ".tekton/coo-fbc-v4-18-push.yaml".pathChanged() ||
       "Dockerfile-4.18.catalog".pathChanged() ||
