feat: enable hermetic builds for uiplugins, perses, and  perses-operator
Signed-off-by: Jenny Zhu <jenny.a.zhu@gmail.com>

--- a/.tekton/dashboards-console-plugin-0-4-1-1-push.yaml
+++ b/.tekton/dashboards-console-plugin-0-4-1-1-push.yaml
@@ -39,6 +39,10 @@ spec:
       value: Dockerfile.ui-dashboards
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./ui-dashboards"}, {"type": "npm", "path":"./ui-dashboards/web"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
