--- a/.tekton/distributed-tracing-console-plugin-0-4-1-1-pull-request.yaml
+++ b/.tekton/distributed-tracing-console-plugin-0-4-1-1-pull-request.yaml
@@ -42,6 +42,10 @@ spec:
       value: Dockerfile.ui-distributed-tracing
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./ui-distributed-tracing"}, {"type": "npm", "path":"./ui-distributed-tracing/web"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
