--- a/.tekton/logging-console-plugin-6-0-1-1-push.yaml
+++ b/.tekton/logging-console-plugin-6-0-1-1-push.yaml
@@ -39,6 +39,10 @@ spec:
       value: Dockerfile.ui-logging-pf4
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./ui-logging-pf4"}, {"type": "npm", "path":"./ui-logging-pf4/web"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
