--- a/.tekton/perses-0-50-1-1-push.yaml
+++ b/.tekton/perses-0-50-1-1-push.yaml
@@ -39,6 +39,10 @@ spec:
       value: Dockerfile.perses
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./perses"}, {"type": "npm", "path":"./perses/ui"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
