--- a/.tekton/perses-operator-0-1-1-1-pull-request.yaml
+++ b/.tekton/perses-operator-0-1-1-1-pull-request.yaml
@@ -42,6 +42,8 @@ spec:
       value: Dockerfile.perses-operator
     - name: path-context
       value: .
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./perses-operator"}'
     - name: build-source-image
       value: "true"
   pipelineSpec:
