--- a/.tekton/perses-operator-0-1-1-1-push.yaml
+++ b/.tekton/perses-operator-0-1-1-1-push.yaml
@@ -39,6 +39,10 @@ spec:
       value: Dockerfile.perses-operator
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./perses-operator"}'
     - name: build-source-image
       value: "true"
   pipelineSpec:
