--- a/.tekton/troubleshooting-panel-console-plugin-0-4-1-1-push.yaml
+++ b/.tekton/troubleshooting-panel-console-plugin-0-4-1-1-push.yaml
@@ -39,6 +39,10 @@ spec:
       value: Dockerfile.ui-troubleshooting-panel
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "./ui-troubleshooting-panel"}, {"type": "npm", "path":"./ui-troubleshooting-panel/web"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
